# accident-vlm

./: .gitignore  README.md  pyproject.toml
docs/: accuracy_expectations.md  architecture_ko.md  architecture_portfolio_ko.md  preprocessing_accuracy_phase_plan.md  preprocessing_accuracy_todo_spec.md
docs/superpowers/plans/: 2026-05-19-accident-video-facts-implementation.md  2026-05-26-local-qwen35-cleanup.md
docs/superpowers/specs/: 2026-05-19-accident-video-facts-design.md
ops/: openai_round_robin_proxy.py
src/accident_vlm/: benchmark.py  cli.py  config.py  evaluation.py  fast_prevlm.py  pipeline.py  training.py
src/accident_vlm/modules/: actor_tracking.py  event_detection.py  event_scan.py  evidence_builder.py  evidence_scoring.py  evidence_visuals.py  fact_verifier.py  frame_selection.py  image_io.py  image_metrics.py  (+12 more)
tests/: test_actor_tracking.py  test_benchmark.py  test_cli.py  test_config.py  test_evaluation.py  test_event_detection.py  test_event_scan.py  test_evidence_scoring.py  test_evidence_visuals.py  test_fact_verifier.py  test_frame_selection.py  test_image_io.py  test_image_metrics.py  test_ingestion.py  test_job_store.py  test_ocr_summary.py  test_openai_round_robin_proxy.py  test_pipeline_contract.py  test_road_geometry.py  test_scene.py  test_schema_guard.py  test_schemas.py  test_server_app.py  test_server_options.py  test_speed_distance.py  test_timecode.py  test_track_consolidation.py  test_traffic_control.py  test_training.py  test_video_quality.py  test_vlm_composer.py  test_vlm_storyboard.py
tests/fixtures/: sample_precomputed.json
(+11 files in other folders)
